--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,17 @@
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
+if(WIN32)
+    set(USERHOME $ENV{USERPROFILE})
+else()
+    set(USERHOME $ENV{HOME})
+endif()
+set(sdkVersion 2.1.1)
+set(toolchainVersion 14_2_Rel1)
+set(picotoolVersion 2.1.1)
+set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+if (EXISTS ${picoVscode})
+    include(${picoVscode})
+endif()
+# ====================================================================================
 
 
 cmake_minimum_required(VERSION 3.13)
@@ -6,7 +20,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(PICO_BOARD pico_w CACHE STRING "Board type")
 include(pico_sdk_import.cmake)
-set(FREERTOS_KERNEL_PATH "Z:/FreeRTOS-Kernel")
+set(FREERTOS_KERNEL_PATH "C:/Users/Miller/Desktop/Univasf/Semestre III/Embarca/FreeRTOS-Kernel")
 include(${FREERTOS_KERNEL_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)
 
 project(PiscaLed C CXX ASM)
@@ -19,14 +33,21 @@ include_directories(${CMAKE_SOURCE_DIR}/lib)
 add_executable(${PROJECT_NAME}  
         DispFilaTasks.c 
         lib/ssd1306.c # Biblioteca para o display OLED
+        lib/led_matriz.c # Biblioteca para a matriz de LED's
+        lib/sirene.c # Biblioteca para o acionamento do buzzer
         )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})
+
+# Creates pio_matriz header file
+pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/pio_matriz.pio)
 
 target_link_libraries(${PROJECT_NAME} 
         pico_stdlib 
         hardware_gpio
         hardware_i2c
+        hardware_clocks
+        hardware_pio
         hardware_adc
         hardware_pwm
         FreeRTOS-Kernel 
