feat: buzzer adicionado

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(${PROJECT_NAME}
         lib/ssd1306.c # Biblioteca para o display OLED
         lib/led_matriz.c # Biblioteca para a matriz de LED's
         lib/sirene.c # Biblioteca para o acionamento do buzzer
+        lib/buzzer.c # Biblioteca para o acionnamento do buzzer
         )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})
